feat(site): update site config and content
- Updated site name and URL
- Replaced logo with new one
- Updated site description (Thai)
- Minor style and text updates
- Added new color variable

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,18 +35,17 @@ const metadata = {
     image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
   >
     <Fragment slot="title">
-      Free template for <span class="hidden xl:inline">creating websites with</span>
-      <span class="text-accent dark:text-white highlight"> Astro 5.0</span> + Tailwind CSS
+      คริสตจักร 
+      <span class="text-green dark:text-white highlight"> เมล็ดพันธุ์</span> กรุงเทพ
     </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 5.0
-        + Tailwind CSS.</span
-      >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span>
-      Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages &
-      Blogs.
+        <span class="font-semibold"></span> คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร
+       </span>
+      <span class="block mb-1 sm:hidden font-bold text-blue-600">คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร</span>
+      <span class="block mb-1 sm:hidden font-bold text-blue-600">คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจกร</span>
+      เราเป็นโบสที่มีวัยรุ่น 100% เรามี culture  แบบวันรุ่นและเน้นการมีความสัมพันธ์ที่ดีกับพระเจ้า
     </Fragment>
   </Hero>
 
