--- a/src/pages/v1/index.astro
+++ b/src/pages/v1/index.astro
@@ -3,10 +3,9 @@ import Header from '$components/saweria/Header.astro'
 import Navbar from '$components/saweria/Navbar.astro'
 import Card from '$components/saweria/Card.astro'
 import CardWithTap from '$components/saweria/CardWithTap.astro'
-import Layout from '../layouts/SeedBKK.astro'
+import Layout from '../../layouts/SeedBKK.astro'
 import Footer from '$components/Footer.astro'
-import ContainerCards from '@/components/saweria/ContainerCards.astro'
-import LoopImages from '@/components/saweria/LoopImages.astro'
+
 ---
 
 <Layout>
