--- a/src/pages/v1/invite.astro
+++ b/src/pages/v1/invite.astro
@@ -3,9 +3,8 @@ import Header from '$components/saweria/Header.astro'
 import Navbar from '$components/saweria/Navbar.astro'
 import Card from '$components/saweria/Card.astro'
 import CardWithTap from '$components/saweria/CardWithTap.astro'
-import Layout from '../layouts/SeedBKK.astro'
+import Layout from '../../layouts/SeedBKK.astro'
 import Footer from '$components/Footer.astro'
-import ContainerCards from '@/components/saweria/ContainerCards.astro'
 ---
 
 <Layout>
