--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,12 +25,12 @@ const metadata = {
     actions={[
       {
         variant: 'primary',
-        text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
+        text: 'พระเจ้ามีจริงไหม',
+        href: 'https://www.seedchurch-thailand.com/%E0%B8%A3-%E0%B8%88-%E0%B8%81%E0%B8%9E%E0%B8%A3%E0%B8%B0%E0%B9%80%E0%B8%88-%E0%B8%B2',
         target: '_blank',
-        icon: 'tabler:download',
+        icon: '',
       },
-      { text: 'Learn more', href: '#features' },
+      { text: 'ข้อมูลองค์กรคริสจักร', href: 'https://www.seedchurch-thailand.com/%E0%B8%AA%E0%B8%B3%E0%B9%80%E0%B8%99%E0%B8%B2%E0%B8%82%E0%B8%AD%E0%B8%87-%E0%B8%A3-%E0%B8%88-%E0%B8%81%E0%B9%82%E0%B8%9A%E0%B8%AA%E0%B8%96-1' },
     ]}
     image={{ src: '~/assets/images/hero-image.png', alt: 'AstroWind Hero Image' }}
   >
@@ -44,8 +44,7 @@ const metadata = {
         <span class="font-semibold"></span> คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร
        </span>
       <span class="block mb-1 sm:hidden font-bold text-blue-600">คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร</span>
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจกร</span>
-      เราเป็นโบสที่มีวัยรุ่น 100% เรามี culture  แบบวันรุ่นและเน้นการมีความสัมพันธ์ที่ดีกับพระเจ้า
+      เราเป็นโบสที่มีวัยรุ่น 100% เรามี culture แบบวันรุ่นและเน้นการมีความสัมพันธ์ที่ดีกับพระเจ้า
     </Fragment>
   </Hero>
 
@@ -57,12 +56,12 @@ const metadata = {
 
   <Features
     id="features"
-    tagline="Features"
-    title="What you get with AstroWind"
-    subtitle="One of the most professional and comprehensive templates currently on the market. Most starred & forked Astro theme in 2022, 2023 and 2024."
+    tagline=""
+    title="Seed Church Bangkok"
+    subtitle="We are a church that is passionate about building disciples and planting churches"
     items={[
       {
-        title: 'Astro + Tailwind CSS Integration',
+        title: 'S = Spiritual Maturity', 
         description:
           'A seamless integration between two great frameworks that offer high productivity, performance and versatility.',
         icon: 'tabler:brand-tailwind',
@@ -108,19 +107,24 @@ const metadata = {
     title="AstroWind's Blueprint: Fun Meets Functionality!"
     items={[
       {
-        title: 'Built on top of Astro 5.0',
+        title: 'เติบโตในการรู้จักพระเจ้า',
         description:
-          'Benefiting from the performance and developer-friendly features of this modern static site generator.',
+          'เราเติบโตผ่านการเฝ้าเดียว อธิฐาน อ่านพระคัมภีร์ นมันการ การสามัคคีอย่างสม่ำเสมอ',
       },
       {
-        title: 'Styled using Tailwind CSS',
+        title: 'เติบโตขึ้นในพระวิญญานบริสุทธิ์เพื่อเป้าหมายไพบูลย์พระคริสต์',
         description:
-          'Facilitating rapid design and consistent styling with this highly popular utility-first CSS framework.',
+          'กาลาเทีย 5:22 ส่วนผลของพระวิญญาณนั้น คือความรัก ความยินดี สันติสุข ความอดทน ความกรุณา ความดี ความซื่อสัตย์ ความสุภาพอ่อนโยน การรู้จักบังคับตน เรื่องอย่างนี้ไม่มีธรรมบัญญัติห้ามไว้เลย',
       },
       {
-        title: 'Cross-browser compatibility',
+        title: 'เติบโตในการใช้ของประทานเพื่อเสริมสร้างคริสตจักรและถวายเกียรติแด่พระเจ้า',
         description:
-          'Ensure your website looks and functions consistently across various web browsers, delivering a seamless experience to all users.',
+          'เติบโตในการยอมจำนนให้ชีวิตเป็นไปตามแผนการและน้ำพระทันพระเจ้าสำหรับชีวิตของเราแต่ละคน ',
+      },
+      {
+        title: 'เติบโตขึ้นในความรักตามพระมหาบัญญัติ',
+        description:
+          'เขาทูลตอบว่า “พวกท่านจงรักองค์พระผู้เป็นเจ้าผู้เป็นพระเจ้าของท่านด้วยสุดใจของท่าน ด้วยสุดจิตของท่าน ด้วยสุดกำลังของท่าน และด้วยสุดความคิดของท่าน และจงรักเพื่อนบ้านเหมือนรักตนเอง',
       },
     ]}
     image={{
@@ -129,8 +133,8 @@ const metadata = {
     }}
   >
     <Fragment slot="content">
-      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">Building on modern foundations</h3>
-      Gain a competitive advantage by incorporating industry leading practices
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">S = Spiritual Maturity</h3>
+    การเติบโตฝ่ายวิญญาณในพระคริสต์
     </Fragment>
 
     <Fragment slot="bg">
@@ -144,23 +148,19 @@ const metadata = {
     isAfterContent
     items={[
       {
-        title: 'High level of customization',
-        description: `Tailor the template effortlessly to match your brand's identity and requirements, making your website distinct and saving you time.`,
+        title: 'ประกาศพระกิตติคุณสมบูรณ์',
+        description:
+          'และอธิฐานเผื่อคนที่ยังไม่รู้จักพระเจ้าเสมอด้วยหัวใจแห่งความรักและห่วงใยคนที่ยังไม่ได้รับความรอดโดยเริ่มต้นที่คนในครอบครัว',
       },
       {
-        title: 'Multiple layout possibilities',
+        title: 'ประกาศข่าวประเสริ๘ที่มีฤทธิ์เดชในการเปลี่ยนแปลงชีวิต',
         description:
-          'Explore various layout options to find the structure that best presents your content, enhancing user engagement and navigation.',
+          'ปลดปล่อยคนจากบาป  ความทุกข์ ปัญหาต่างๆ เพื่อเราจะเห็นสังคมที่ดีขึ้น',
       },
       {
-        title: 'Fully responsive design',
+        title: 'ประกาศข่าวประเสริฐในทุกโอกาส เช่น งานวันเกิด งานแต่งงาน งานอาลัย งานขึ้นบ้านใหม่ และอื่นๆ กับคนทุกเพศ วัย ทุกสถานนะในสังคม',
         description:
-          "Ensure your website's optimal performance on various devices and screen sizes, providing a consistent and enjoyable user experience.",
-      },
-      {
-        title: 'Integration of media',
-        description:
-          'Seamlessly incorporate images, videos, and multimedia elements that enhance your content and engage visitors effectively.',
+          'ประกาศข่าวประเสริฐโดยการแสดงความรัก ผ่านการช่วยเหลือที่ยากลำบากในสังคม ผ่านมูลนิธิรักเพื่อนบ้าน',
       },
     ]}
     image={{
@@ -168,7 +168,10 @@ const metadata = {
       alt: 'Blueprint Image',
     }}
   >
-    <Fragment slot="content">Ensure your online presence truly represents you.</Fragment>
+    <Fragment slot="content">
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2"> E = Evergelization</h3>  
+       ประกาศด้วยใจเชื่อฟังพระมหาบัญชา
+    </Fragment>
 
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
@@ -181,32 +184,37 @@ const metadata = {
     isReversed
     isAfterContent
     items={[
+      // {
+      //   title: 'ประกาศพระกิตติคุณสมบูรณ์',
+      //   description:
+      //     'และอธิฐานเผื่อคนที่ยังไม่รู้จักพระเจ้าเสมอด้วยหัวใจแห่งความรักและห่วงใยคนที่ยังไม่ได้รับความรอดโดยเริ่มต้นที่คนในครอบครัว',
+      // },
+      // {
+      //   title: 'ประกาศข่าวประเสริ๘ที่มีฤทธิ์เดชในการเปลี่ยนแปลงชีวิต',
+      //   description:
+      //     'ปลดปล่อยคนจากบาป  ความทุกข์ ปัญหาต่างๆ เพื่อเราจะเห็นสังคมที่ดีขึ้น',
+      // },
+      // {
+      //   title: 'ประกาศข่าวประเสริฐในทุกโอกาส เช่น งานวันเกิด งานแต่งงาน งานอาลัย งานขึ้นบ้านใหม่ และอื่นๆ กับคนทุกเพศ วัย ทุกสถานนะในสังคม',
+      //   description:
+      //     'ประกาศข่าวประเสริฐโดยการแสดงความรัก ผ่านการช่วยเหลือที่ยากลำบากในสังคม ผ่านมูลนิธิรักเพื่อนบ้าน',
+      // },
+
       {
-        title: 'Enhanced user engagement',
-        description:
-          'Captivate your audience with interactive elements, intuitive navigation, and visually appealing layouts, encouraging longer visits.',
-      },
-      {
-        title: 'Continuous improvement',
-        description:
-          'Ensure your website stays aligned with the latest trends and technologies through regular updates and enhancements.',
-      },
-      {
-        title: 'Time and resource efficiency',
-        description:
-          'Skip the time-consuming process of building a website from scratch and launch your online presence sooner with AstroWind.',
-      },
-      {
-        title: 'Community support',
-        description: `Join the growing AstroWind community for insights, resources, and assistance, ensuring you're never alone on your web development journey.`,
-      },
+        title:"เอเฟซัส 4:11-12",
+        description:'เอเฟซัส 1:22-23 พระเจ้า​วาง​ทุก​สิ่ง​ไว้​ใต้เท้า​ของ​พระคริสต์ และ​พระองค์​ตั้ง​พระคริสต์​เป็น​ศีรษะ​เหนือ​ทุกสิ่ง​เพื่อ​หมู่ประชุม​ของ​พระองค์ หมู่​ประชุม​นี้​คือ​ร่างกาย​ของ​พระคริสต์ และ​หมู่​ประชุม​นี้​เต็ม​เปี่ยม​ไป​ด้วย​พระคริสต์ และ​พระคริสต์​ทำให้​ทุกสิ่ง​เต็มเปี่ยม​ไปด้วย​พระองค์'
+      }
     ]}
     image={{
       src: 'https://images.unsplash.com/photo-1611462985358-60d3498e0364?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80',
       alt: 'Astronauts Image',
     }}
   >
-    <Fragment slot="content">Designed to foster growth and success.</Fragment>
+    <Fragment slot="content">
+      <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2"> E = Establish Church 
+      </h3>
+      ตั้งคริสตจักรของพระคริสต์ของพระเจ้า ไม่ใช้ของเรา
+    </Fragment>
 
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
