chore: update website content and styles
- Updated color palette
- Replaced logo image
- Minor text changes
- Updated app download links
- Improved homepage layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,10 +41,10 @@ const metadata = {
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold"></span> คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร
+        <span class="font-semibold text-blue-600">คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร</span> 
        </span>
       <span class="block mb-1 sm:hidden font-bold text-blue-600">คริสตจักรแห่งการสร้างสาวกและตั้งคริสตจักร</span>
-      เราเป็นโบสที่มีวัยรุ่น 100% เรามี culture แบบวันรุ่นและเน้นการมีความสัมพันธ์ที่ดีกับพระเจ้า
+      โบสที่มีวัยรุ่น 100% และ culture แบบวัยรุ่น
     </Fragment>
   </Hero>
 
@@ -57,45 +57,26 @@ const metadata = {
   <Features
     id="features"
     tagline=""
-    title="Seed Church Bangkok"
-    subtitle="We are a church that is passionate about building disciples and planting churches"
+    title="Vision"
+    subtitle=""
     items={[
+
       {
-        title: 'S = Spiritual Maturity', 
+        
+        title: 'Thailand Shall Be Safe', 
         description:
-          'A seamless integration between two great frameworks that offer high productivity, performance and versatility.',
-        icon: 'tabler:brand-tailwind',
+          'นำพระพรไปสู่คนไทย เพื่อเปลี่ยนแปลงชีวิตคนไทยให้ดึขึ้น',
+        // icon: 'tabler:brand-tailwind',
       },
       {
-        title: 'Ready-to-use Components',
+        title: 'Teenatures Shall Be Leaders', 
         description:
-          'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Blogs, Personal Profiles, Small Business...',
-        icon: 'tabler:components',
+          'ปรารถนาที่จะเห็นเยาวชนเป็นผู้นำในการเปลี่ยนแปลงในการเปลี่ยนแปลงประเทศไปในทางที่ดีตามแบบอย่างพระเยซูคริสต์'
+        // icon: 'tabler:brand-tailwind',
       },
-      {
-        title: 'Best Practices',
-        description:
-          'Creating secure, efficient, and user-friendly websites that deliver exceptional experiences and lasting value.',
-        icon: 'tabler:list-check',
-      },
-      {
-        title: 'Excellent Page Speed',
-        description:
-          'Having a good page speed impacts organic search ranking, improves user experience (UI/UX) and increase conversion rates.',
-        icon: 'tabler:rocket',
-      },
-      {
-        title: 'Search Engine Optimization (SEO)',
-        description:
-          "SEO lies in its ability to enhance a website's visibility, driving organic traffic and enabling it to reach a wider audience.",
-        icon: 'tabler:arrows-right-left',
-      },
-      {
-        title: 'Open to new ideas and contributions',
-        description:
-          'Embracing a culture that is open to new ideas and contributions is integral fostering innovation, collaboration, and a dynamic user experience.',
-        icon: 'tabler:bulb',
-      },
+      
+     
+     
     ]}
   />
 
@@ -153,7 +134,7 @@ const metadata = {
           'และอธิฐานเผื่อคนที่ยังไม่รู้จักพระเจ้าเสมอด้วยหัวใจแห่งความรักและห่วงใยคนที่ยังไม่ได้รับความรอดโดยเริ่มต้นที่คนในครอบครัว',
       },
       {
-        title: 'ประกาศข่าวประเสริ๘ที่มีฤทธิ์เดชในการเปลี่ยนแปลงชีวิต',
+        title: 'ประกาศข่าวประเสริฐที่มีฤทธิ์เดชในการเปลี่ยนแปลงชีวิต',
         description:
           'ปลดปล่อยคนจากบาป  ความทุกข์ ปัญหาต่างๆ เพื่อเราจะเห็นสังคมที่ดีขึ้น',
       },
@@ -221,24 +202,24 @@ const metadata = {
       {
         title: 'สร้างสาวกด้วยการเรียนพระคัมภีร์อย่างเป็นระบบ',
         description:
-          "Kickstart with GitHub! Either fork the AstroWind template or simply click 'Use this template'. Your canvas awaits, ready for your digital masterpiece. In just a few clicks, you've already set the foundation.",
+          "สร้างสาวก 1:1 ในการสอนพระวจนะ ตักเตือน หนุนใจ เยียวยา เพื่อสาวกจะรับการขัดเกลาชีวิตอย่างแท้จริง",
         // icon: 'tabler:package',
       },
       {
-        title: 'Step 2: <span class="font-medium">Add content</span>',
+        title: 'สร้างสาวกในผู้รับใช้พระเจ้า ทิโมธี',
         description:
-          "Pour your vision into it. Add images, text, and all that jazz to breathe life into your digital space. Remember, it's the content that tells your story, so make it captivating.",
-        icon: 'tabler:letter-case',
+          "เพื่อเข้าใจหลักการในการเป็นผู้นำและการดูแลคริสตจักรของพระเจ้า",
+        // icon: 'tabler:letter-case',
       },
       {
-        title: 'Step 3: <span class="font-medium">Customize styles</span>',
+        title: 'สร้างสาวกผ่านกลุ่มย่อย ด้วยบทเรียนแคร์ เป้าหมายเพื่อประยุกต์ใช้ในชีวิตประจำวัน',
         description:
-          'Give it your personal touch. Tailor colors, fonts, and layouts until it feels just right. Your unique flair, amplified by AstroWind! Precision in design ensures a seamless user experience.',
-        icon: 'tabler:paint',
+          'สร้างสาวก โดนผ่านการเข้าร่วมอบรบการเป็นผู้รับใช้หรือเรียนกับสถาบันพระคัมภีร์ที่เป็นการยอมรับ',
+        // icon: 'tabler:paint',
       },
       {
-        title: 'Ready!',
-        icon: 'tabler:check',
+        title: 'สร้างสาวกสู่รุ่นถัดไป',
+        description: '2 ทิโมธี 2:2 จงมอบคำสอนเหล่านั้นซึ่งท่านได้ยินจากข้าพเจ้าต่อหน้าพยานหลายๆ คนไว้กับบรรดาคนซื่อสัตย์ที่สามารถสอนคนอื่นได้ด้วย',
       },
     ]}
     image={{
@@ -249,7 +230,7 @@ const metadata = {
 
   <!-- Features2 Widget ************** -->
 
-  <Features2
+  <!-- <Features2
     title="Most used widgets"
     subtitle="Provides frequently used components for building websites using Tailwind CSS"
     tagline="Components"
@@ -309,7 +290,7 @@ const metadata = {
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </Features2>
+  </Features2> -->
 
   <!-- HighlightedPosts Widget ******* -->
 
@@ -325,37 +306,37 @@ const metadata = {
 
   <FAQs
     title="Frequently Asked Questions"
-    subtitle="Dive into the following questions to gain insights into the powerful features that AstroWind offers and how it can elevate your web development journey."
+    subtitle="เจาะลึกคำถามต่อไปนี้เพื่อรับข้อมูลเชิงลึก"
     tagline="FAQs"
     classes={{ container: 'max-w-6xl' }}
     items={[
       {
-        title: 'Why AstroWind?',
+        title: 'พระเยซูคือใคร  ตายบนกางเขนแล้วเกี่ยวอะไรกับฉัน?',
         description:
           "Michael Knight a young loner on a crusade to champion the cause of the innocent. The helpless. The powerless in a world of criminals who operate above the law. Here he comes Here comes Speed Racer. He's a demon on wheels.",
       },
       {
-        title: 'What do I need to start?',
+        title: 'ทุกศาสนาสอนให้เป็นคนดี แล้วทำไมต้องเชื่อพระเจ้า',
         description:
           'Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds. Many say exploration is part of our destiny, but it’s actually our duty to future generations.',
       },
       {
-        title: 'How to install the Astro + Tailwind CSS template?',
+        title: 'พระเจ้าก็เหมือนเป็นกุศโลบายที่ทำให้เราทำความดีหรอ?',
         description:
           "Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows.",
       },
       {
-        title: "What's something that you don't understand?",
+        title: "อยู่ในสังคมคริสเตียนโดนล้างสมองหรืองมงายจริงป่าว?",
         description:
           "A flower in my garden, a mystery in my panties. Heart attack never stopped old Big Bear. I didn't even know we were calling him Big Bear.",
       },
       {
-        title: 'What is something that you would like to try again?',
+        title: 'ทำไมคนไปโบสเยอะจังเลย ผู้นำที่โบสได้อะไร เขาได้เงินได้กำไรหรอ?',
         description:
           "A business big enough that it could be listed on the NASDAQ goes belly up. Disappears! It ceases to exist without me. No, you clearly don't know who you're talking to, so let me clue you in.",
       },
       {
-        title: 'If you could only ask one question to each person you meet, what would that question be?',
+        title: 'คริสเตียนเป็นพวกไร้ความรับชอบเอาแต่พึ่งพาพระเจ้าจริงหรอ',
         description:
           "This is not about revenge. This is about justice. A lot of things can change in twelve years, Admiral. Well, that's certainly good to know. About four years. I got tired of hearing how young I looked.",
       },
