--- a/src/pages/homes/mobile-app.astro
+++ b/src/pages/homes/mobile-app.astro
@@ -15,10 +15,10 @@ import Button from '~/components/ui/Button.astro';
 import Image from '~/components/common/Image.astro';
 
 const appStoreImg = '~/assets/images/app-store.png';
-const appStoreDownloadLink = 'https://github.com/onwidget/astrowind';
+const appStoreDownloadLink = 'https://apps.apple.com/us/app/seed-church/id6654904118';
 
 const googlePlayImg = '~/assets/images/google-play.png';
-const googlePlayDownloadLink = 'https://github.com/onwidget/astrowind';
+const googlePlayDownloadLink = 'https://play.google.com/store/apps/details?id=com.seedchurchthailand.seed&pcampaignid=web_share';
 
 const metadata = {
   title: 'Mobile App Homepage',
@@ -49,23 +49,23 @@ const metadata = {
   <!-- Hero2 Widget ******************* -->
 
   <Hero2
-    tagline="Mobile App Web Demo"
+    tagline="Mobile App"
     image={{
       src: 'https://images.unsplash.com/photo-1535303311164-664fc9ec6532?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=987&q=80',
       alt: 'AstroWind Hero Image',
     }}
   >
     <Fragment slot="title">
-      <span class="text-accent dark:text-white highlight">AstroWind App</span>: <br /> professional websites <span
-        class="hidden xl:inline">made easy</span
+      <span class="text-green dark:text-white highlight">Seed App</span>   <br /> เข้าใกล้เรามากขึ้น <span
+        class="hidden xl:inline">ผ่าน Application</span
       >
     </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        Unlock boundless creativity at your fingertips: your gateway to innovative design.
+        ใน application คุณจะพบกับบทเรียนผู้เชื่อใหม่ รากฐานชีวิตคริสเตียน คำพยานชีวิต หลักข้อชื่อและอื่นๆ
       </span>
-      Download now and embark on a journey to elevate your projects like never before.
+      <!-- Download now and embark on a journey to elevate your projects like never before. -->
     </Fragment>
 
     <div slot="actions" class="flex max-w-sm gap-4">
