feat(pages): update home pages content
- Updated hero section tagline and actions
- Replaced hero image with QR code
- Updated call to action text and href
- Added new image component
- Updated content in index.astro

--- a/src/pages/homes/saas.astro
+++ b/src/pages/homes/saas.astro
@@ -111,8 +111,8 @@ const metadata = {
   <!-- Content Widget **************** -->
 
   <Content
-    title="Use cases"
-    subtitle="Discover how AstroWind's versatile template serves as the ideal solution for various use cases, providing tailored solutions to drive success."
+    title="ถวายด้วย Cryptocurrency"
+    subtitle="การถวายด้วยคริปโตเคอร์เรนซีเป็นทางเลือกใหม่สำหรับผู้ที่ไม่มีเงิน fiat "
     isReversed
     items={[
       {
@@ -126,7 +126,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: 'https://images.unsplash.com/photo-1620558138198-cfb9b4f3c294?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1671&q=80',
+      src: '~/assets/images/QR_SEED_Wallet.png',
       alt: 'Startup Image',
     }}
   >
