--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -1,7 +1,6 @@
 ---
 import '@fontsource-variable/inter';
-
-// 'DM Sans'
+import '@fontsource/sarabun';// 'DM Sans'
 // Nunito
 // Dosis
 // Outfit
@@ -21,9 +20,9 @@ import '@fontsource-variable/inter';
 
 <style is:inline>
   :root {
-    --aw-font-sans: 'Inter Variable';
-    --aw-font-serif: 'Inter Variable';
-    --aw-font-heading: 'Inter Variable';
+    --aw-font-sans: 'Sarabun';
+    --aw-font-serif: 'Sarabun';
+    --aw-font-heading: 'Sarabun';
 
     --aw-color-primary: rgb(1 97 239);
     --aw-color-secondary: rgb(1 84 207);
