--- a/src/pages/homes/saas.astro
+++ b/src/pages/homes/saas.astro
@@ -40,7 +40,7 @@ const metadata = {
   <!-- Hero2 Widget ******************* -->
 
   <Hero2
-    tagline="ถวายทรัพย์"
+    tagline="ถวายทรัพย์เงินบาท"
     actions={[
       { variant: 'primary', target: '_blank', text: 'ถวายเป็น cryptocurrency', href: '' },
       { text: 'เรียนรู้เพิ่มเติมถ้าคุณยังไม่เข้าใจเรื่องนี้', href: '#features' },
@@ -65,9 +65,35 @@ const metadata = {
     </Fragment>
   </Hero2>
 
+  <Hero2
+  tagline="ถวายทรัพย์คริปโต"
+  actions={[
+    { variant: 'primary', target: '_blank', text: 'ถวายเป็น cryptocurrency', href: '' },
+    { text: 'เรียนรู้เพิ่มเติมถ้าคุณยังไม่เข้าใจเรื่องนี้', href: '#features' },
+  ]}
+  image={{
+    src: '~/assets/images/QR_SEED_Wallet.png',
+    alt: 'AstroWind Hero Image',
+
+  }}
+>
+  <Fragment slot="title">
+     ถวายทรัพย์ <br /> Address wallet <span class="text-accent dark:text-white highlight"
+      ><br />0x2c652...7cB28</span
+    ><br />
+  </Fragment>
+
+  <Fragment slot="subtitle">
+    <span class="hidden sm:inline">
+       <span class="font-semibold">prefer BTC, ETH, USDT</span></span
+    >
+    เหรียนของท่านจะถูกจัดเก็บใน  hard wallet 
+  </Fragment>
+</Hero2>
+  
   <!-- Features Widget *************** -->
 
-  <Features
+  <!-- <Features
     id="features"
     title="Why choose AstroWind?"
     subtitle="Each of the following features enhances AstroWind's value proposition."
@@ -106,11 +132,11 @@ const metadata = {
         icon: 'tabler:eyeglass',
       },
     ]}
-  />
+  /> -->
 
   <!-- Content Widget **************** -->
 
-  <Content
+  <!-- <Content
     title="ถวายด้วย Cryptocurrency"
     subtitle="การถวายด้วยคริปโตเคอร์เรนซีเป็นทางเลือกใหม่สำหรับผู้ที่ไม่มีเงิน fiat "
     isReversed
@@ -132,18 +158,18 @@ const metadata = {
   >
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">
-        Startup success stories: <br /><span class="text-2xl">Launching with AstroWind</span>
+        Scan เพื่อเข้าถึง Address <br /><span class="text-2xl">Launching with AstroWind</span>
       </h3>
     </Fragment>
 
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </Content>
+  </Content> -->
 
   <!-- Content Widget **************** -->
 
-  <Content
+  <!-- <Content
     isAfterContent={true}
     items={[
       {
@@ -169,11 +195,11 @@ const metadata = {
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </Content>
+  </Content> -->
 
   <!-- Content Widget **************** -->
 
-  <Content
+  <!-- <Content
     isReversed
     isAfterContent={true}
     items={[
@@ -200,11 +226,11 @@ const metadata = {
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </Content>
+  </Content> -->
 
   <!-- Content Widget **************** -->
 
-  <Content
+  <!-- <Content
     items={[
       {
         title: 'Description:',
@@ -229,11 +255,11 @@ const metadata = {
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </Content>
+  </Content> -->
 
   <!-- Pricing Widget ******************* -->
 
-  <Pricing
+  <!-- <Pricing
     title="Flexible pricing plans"
     prices={[
       {
@@ -272,7 +298,7 @@ const metadata = {
         },
       },
     ]}
-  />
+  /> -->
 
   <!-- FAQs Widget ******************* -->
 
@@ -311,8 +337,8 @@ const metadata = {
   <!-- Steps2 Widget ****************** -->
 
   <Steps2
-    title="Reach out to us"
-    subtitle="Have questions? Feel free to contact us using the form below. We're here to help!"
+    title="ติดต่อเรา"
+    subtitle="มีคำถามหรือข้อสงสัย? เกี่ยวกับเรา"
     callToAction={{
       text: 'Contact us',
       href: '/',
@@ -320,17 +346,17 @@ const metadata = {
     items={[
       {
         title: 'Email us',
-        description: 'contact@support.com',
+        description: 'seedch.bkk@gmail.com',
         icon: 'tabler:mail',
       },
       {
         title: 'Call us',
-        description: '+1 (234) 567-890',
+        description: '064 992 2255',
         icon: 'tabler:headset',
       },
       {
-        title: 'Follow us',
-        description: '@example',
+        title: 'Chat with us',
+        description: 'facebook.com/seedbangkokcitychurch',
         icon: 'tabler:brand-twitter',
       },
     ]}
