--- a/src/pages/homes/personal.astro
+++ b/src/pages/homes/personal.astro
@@ -230,7 +230,7 @@ const metadata = {
   >
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">
-        ราชเทวี : <br /><span class="text-2xl"></span>
+        ราชเทวี @ Creative Space Cafe สภาคริสตจักร: <br /><span class="text-2xl"></span>
       </h3>
     </Fragment>
 
@@ -268,7 +268,7 @@ const metadata = {
   >
     <Fragment slot="content">
       <h3 class="text-2xl font-bold tracking-tight dark:text-white sm:text-3xl mb-2">
-        เกษตรศาสตร์ : <br /><span class="text-2xl">Event poster for art & music festival</span>
+        เกษตรศาสตร์ @ อาคารเรียนรวม3  KU : <br /><span class="text-2xl">Event poster for art & music festival</span>
       </h3>
     </Fragment>
 
