feat(pages): update home pages content
- Updated navigation links
- Added new component: Note
- Updated FAQs content
- Updated home page content (saas, startup)
- Changed some text colors

--- a/src/pages/homes/saas.astro
+++ b/src/pages/homes/saas.astro
@@ -11,6 +11,7 @@ import Pricing from '~/components/widgets/Pricing.astro';
 import { headerData } from '~/navigation';
 import FAQs from '~/components/widgets/FAQs.astro';
 import BlogLatestPosts from '~/components/widgets/BlogLatestPosts.astro';
+import Note from '~/components/widgets/Note.astro';
 
 const metadata = {
   title: 'SaaS Landing Page',
@@ -64,7 +65,7 @@ const metadata = {
       ชื่อบัญชีเอกมณีและวัธนีและพิชาม
     </Fragment>
   </Hero2>
-
+  <Note />
   <Hero2
   tagline="ถวายทรัพย์คริปโต"
   actions={[
@@ -78,7 +79,7 @@ const metadata = {
   }}
 >
   <Fragment slot="title">
-     ถวายทรัพย์ <br /> Address wallet <span class="text-accent dark:text-white highlight"
+     ถวายทรัพย์ <br /> Address wallet <span class="text-green dark:text-white highlight"
       ><br />0x2c652...7cB28</span
     ><br />
   </Fragment>
@@ -306,24 +307,24 @@ const metadata = {
     title="Frequently Asked Questions"
     items={[
       {
-        title: 'Is AstroWind compatible with the latest versions of Astro and Tailwind CSS?',
+        title: 'เงินถวายคืออะไร?',
         description:
-          'Yes, AstroWind is designed to be compatible with the latest versions of both Astro and Tailwind CSS. This ensures that you can harness the full capabilities of these technologies while benefiting from the features offered by AstroWind.',
+          'เงินถวายคือเงินที่คริสเตียนบริจาคให้กับคริสตจักรหรือองค์กรคริสเตียนอื่นๆ เพื่อสนับสนุนพันธกิจต่างๆ ของคริสตจักร เช่น การประกาศพระกิตติคุณ การช่วยเหลือผู้ยากไร้ การบำรุงรักษาสถานที่ และอื่นๆ ',
         icon: 'tabler:chevrons-right',
       },
       {
-        title: 'Can I use AstroWind for both personal and commercial projects?',
-        description: `Certainly! AstroWind is versatile and can be used for a wide range of projects, including both personal and commercial endeavors. Whether you're building a professional portfolio, launching a startup, or creating a marketing website, AstroWind has you covered.`,
+        title: 'ทำไมถึงต้องถวายเงิน?',
+        description: `การถวายเงินเป็นส่วนหนึ่งของการนมัสการพระเจ้า เป็นการแสดงออกถึงความเชื่อ ความรัก และความขอบคุณต่อพระเจ้าสำหรับพระพรต่างๆ ที่ได้รับ นอกจากนี้ เงินถวายยังเป็นแหล่งสนับสนุนที่สำคัญสำหรับพันธกิจของคริสตจักร`,
         icon: 'tabler:chevrons-right',
       },
       {
-        title: 'What level of coding knowledge is required to use AstroWind?',
+        title: 'สิบลดคืออะไร?',
         description:
-          'While some familiarity with HTML, CSS, and web development concepts is helpful, the user-friendly interface and customization options allow those with limited coding experience to create impressive websites. For more advanced users, AstroWind offers extensive customization capabilities.',
+          'สิบลดคือการถวาย 10% ของรายได้ให้กับคริสตจักร ซึ่งเป็นแนวคิดที่มาจากพระคัมภีร์เดิม เป็นการแสดงออกถึงความเชื่อ ความเคารพ และความขอบคุณต่อพระเจ้า',
         icon: 'tabler:chevrons-right',
       },
       {
-        title: 'Is customer support available for AstroWind users seeking guidance?',
+        title: 'เงินถวายเอาไปทำอะไร?',
         description: `Absolutely, our dedicated customer support team is here to assist you with any questions or challenges you may encounter. Feel free to reach out to us through our support channels, and we'll be happy to provide the help you need.`,
         icon: 'tabler:chevrons-right',
       },
