--- a/src/pages/homes/startup.astro
+++ b/src/pages/homes/startup.astro
@@ -22,31 +22,30 @@ const metadata = {
   <!-- Hero Widget ******************* -->
 
   <Hero
-    tagline="Startup Web Demo"
+    tagline="ประวัติองค์กรคริสตจักรองค์กรคริสตจักรเมล็ดพันธุ์"
     actions={[
       {
         variant: 'primary',
         target: '_blank',
-        text: 'Get templates',
-        href: 'https://github.com/onwidget/astrowind',
+        text: 'Leadership',
+        href: 'https://www.seedchurch-thailand.com/leadership',
         icon: 'tabler:download',
       },
-      { text: 'Learn more', href: '#features' },
+      { text: 'Learn more', href: 'https://www.seedchurch-thailand.com/' },
     ]}
   >
     <Fragment slot="title">
-      Improve <span class="hidden sm:inline">the online presence of</span> your <span
-        class="text-accent dark:text-white highlight">Startup</span
-      > with Astrowind templates
+      ประวัติองค์กรคริสตจักร <span class="hidden sm:inline"></span>  <span
+        class="text-green dark:text-white highlight">เมล็ดพันธุ์</span
+      >  on Youtube
     </Fragment>
 
     <Fragment slot="subtitle">
-      Step into the spotlight with <span class="font-semibold">Astrowind</span> templates, your pathway to fortifying your
-      startup's digital footprint, fostering credibility, and expanding your reach.
+    เรื่องราวของศาสนาจารย์ ธิคุณ ภาพเสน่ห์และศาสนาจารย์กรรฐิมา ภาพเสน่ห์ <span class="font-semibold"></span> 
     </Fragment>
 
     <Fragment slot="image">
-      <YouTube id="gxBkghlglTg" title="Astro just Launched.... Could it be the ultimate web framework?" />
+      <YouTube id="DtNZMdzVdso" title="ประวัติองค์คริสตจักรเมล็ดพันธุ์" />
       <style is:inline>
         lite-youtube {
           margin: 0 auto;
@@ -58,18 +57,18 @@ const metadata = {
 
   <!-- Features2 Widget ************** -->
 
-  <Features2
+  <!-- <Features2
     title="About us"
     subtitle="We believe in the magic of turning dreams into stunning realities. Founded by passionate developers with a shared vision, we set out to simplify the website creation process. Our templates bring together the innovation of Astro 5.0 and the versatility of Tailwind CSS, enabling you to express your unique brand identity like never before."
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </Features2>
+  </Features2> -->
 
   <!-- Stats Widget ****************** -->
 
-  <Stats
+  <!-- <Stats
     title="Discover the impressive impact of Astrowind"
     subtitle="The numbers below reflect the trust our users have placed in us and the remarkable outcomes we've helped them achieve."
     stats={[
@@ -78,11 +77,11 @@ const metadata = {
       { title: 'User Ratings', amount: '4.8' },
       { title: 'Satisfied Clients', amount: '116K' },
     ]}
-  />
+  /> -->
 
   <!-- Brands Widget ****************** -->
 
-  <Brands
+  <!-- <Brands
     title="Partnerships & Collaborations"
     subtitle="At Astrowind, we believe in the power of collaboration to drive innovation and create exceptional experiences."
     icons={[]}
@@ -125,11 +124,11 @@ const metadata = {
         alt: 'Yahoo',
       },
     ]}
-  />
+  /> -->
 
   <!-- Features2 Widget ************** -->
 
-  <Features2
+  <!-- <Features2
     title="What services do we provide?"
     subtitle="We offer a wide range of website templates that suit various industries and purposes such as business, portfolio, e-commerce, blog, etc."
     items={[
@@ -156,11 +155,11 @@ const metadata = {
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </Features2>
+  </Features2> -->
 
   <!-- Features Widget *************** -->
 
-  <Features
+  <!-- <Features
     id="features"
     title="Main features of our templates"
     subtitle="Possess several key characteristics to effectively cater to the needs of startups and entrepreneurs."
@@ -200,11 +199,11 @@ const metadata = {
         icon: 'tabler:plug-connected',
       },
     ]}
-  />
+  /> -->
 
   <!-- FAQs Widget ******************* -->
 
-  <FAQs
+  <!-- <FAQs
     title="Frequently Asked Questions"
     items={[
       {
@@ -242,11 +241,11 @@ const metadata = {
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
     </Fragment>
-  </FAQs>
+  </FAQs> -->
 
   <!-- Features3 Widget ************** -->
 
-  <Features3
+  <!-- <Features3
     title="Let us know how we can help"
     subtitle="We’re here to help and answer any question you might have."
     columns={4}
@@ -292,11 +291,11 @@ const metadata = {
         },
       },
     ]}
-  />
+  /> -->
 
   <!-- CallToAction Widget *********** -->
 
-  <CallToAction
+  <!-- <CallToAction
     actions={[
       {
         variant: 'primary',
@@ -313,5 +312,5 @@ const metadata = {
       Discover a dynamic work environment, unparalleled growth opportunities, and the chance to make a meaningful
       impact.
     </Fragment>
-  </CallToAction>
+  </CallToAction> -->
 </Layout>
